--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
             <div class="col-md-8">
                 <h1 class="text-center">CONTACT ME</h1>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6" id="form">
                         <input type="email" class="form-control" placeholder="NAME">
 
                     </div>
-                    <div class="col-md-6">
-                        <p>If you liked my work and want to contact me feel free to fill the form to my left and i will try to answer you back as fast as posible or you can hit me up in my social networks.</p>
+                    <div class="col-md-offset-6" id="contact-text">
+                        <h2>If you liked my work and want to contact me feel free to fill the form to my left and i will try to answer you back as fast as posible or you can hit me up in my social networks.</h2>
                     </div>
                 </div>
             </div>
@@ -131,24 +131,27 @@
     <div class="col-md-6">
       <h3 class="text-justify">This page was made as an exercise for freecodecamp.com</h3>
     </div>
-    <div class="col-md-2 ">
+    <div class="col-md-2 " id="social2">
       <h3>SOCIAL NETWORKS</h3>
       <div class="col-md-3">
       <a href="https://twitter.com/eltiokappa">
-          <img class="img-responsive" src="https://s18.postimg.io/be2gut4i1/twitter_logo.png" width="40" height="40">
+          <img class="img-responsive" src="images/twitter.png" width="40" height="40">
       </a>
     </div>
       <div class="col-md-3">
       <a href="https://www.facebook.com/eltiokappa/">
-          <img class="img-responsive" src="https://s21.postimg.io/cnspedjqf/facebook_logo.png" width="40" height="40">
+          <img class="img-responsive" src="images/fb.png" width="40" height="40">
       </a>
     </div>
     <div class="col-md-3">
     <a href="https://github.com/charliekappa/">
-        <img class="img-responsive" src="https://s18.postimg.io/abgfnqs15/github_logo.png" width="40" height="40">
+        <img class="img-responsive" src="images/git.png" width="40" height="40">
     </a>
   </div>
   </div>
+</div>
+</div>
+
 
 
 
