--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
 
 
@@ -61,7 +62,7 @@
     </div>
 
 
-
+    <div class="separator"></div>
 
     <!-- Block Gallery -->
     <div class="container" id="projects">
@@ -107,21 +108,26 @@
             </div>
         </div>
     </div>
+
+    <div class="separator"></div>
 <!-- contact block -->
     <div class="container" id="contact">
         <div class="row">
-            <div class="col-md-8">
                 <h1 class="text-center">CONTACT ME</h1>
                 <div class="row">
-                    <div class="col-md-6" id="form">
+                    <div class="col-xs-5" id="form">
                         <input type="email" class="form-control" placeholder="NAME">
+                        <input type="email" class="form-control" placeholder="EMAIL ADDRESS">
+                        <input type="email" class="form-control" placeholder="PHONE NUMBER">
+                        <textarea class="form-control" rows="5" placeholder="MESSAGE"></textarea>
+                        <button type="button" class="btn btn-default">SEND</button>
 
                     </div>
-                    <div class="col-md-offset-6" id="contact-text">
-                        <h2>If you liked my work and want to contact me feel free to fill the form to my left and i will try to answer you back as fast as posible or you can hit me up in my social networks.</h2>
+                    <div class="col-md-6" id="contact-text">
+                        <h3>If you liked my work and want to contact me feel free to fill the form to my left and i will try to answer you back as fast as posible or you can hit me up in my social networks.</h3>
                     </div>
                 </div>
-            </div>
+
         </div>
     </div>
 
