--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             </div>
             <div class="col-md-9 pull-left">
                 <h1>Welcome</h1>
-                <p> Hello my name is Charly Reyes and i'm in process to become a full-time web developer so i made this website to showcase my skills.</p>
+                <h3> Hello my name is Charly Reyes and i'm in process to become a full-time web developer so i made this website to showcase my skills.</h3><br>
+                <h3> Hope you enjoy it and feel free to contact me via social networks or my contact form.</h3>
             </div>
         </div>
     </div>
